--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
       crossorigin="anonymous"
     />
 
-    <title>artscafe</title>
+    <title>cars.lk</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
